@@ -1,0 +1,5 @@
+LIBRARY faultrep.DLL
+EXPORTS
+AddERExcludedApplicationA@4
+AddERExcludedApplicationW@4
+ReportFault@8
